RESOLVED FIXED272011
[IFC] Negative hyphen width triggers ASSERT in TextUtil::breakWord
https://bugs.webkit.org/show_bug.cgi?id=272011
Summary [IFC] Negative hyphen width triggers ASSERT in TextUtil::breakWord
alan
Reported 2024-04-01 20:24:05 PDT
Attachments
[fast-cq]Patch (4.11 KB, patch)
2024-04-01 20:29 PDT, alan
no flags
alan
Comment 1 2024-04-01 20:29:29 PDT
Created attachment 470713 [details] [fast-cq]Patch
EWS
Comment 2 2024-04-03 08:07:44 PDT
Committed 276999@main (8e06611bad26): <https://commits.webkit.org/276999@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470713 [details].
Note You need to log in before you can comment on or make changes to this bug.