[IFC] Negative hyphen width triggers ASSERT in TextUtil::breakWord https://bugs.webkit.org/show_bug.cgi?id=272011 <rdar://125726764>

Reviewed by Antti Koivisto.

When negative letter-spacing produces negative hyphen width, we think there's some actual
available space for content (subtracting a negative value) which confuses TextUtil::breakWord logic.

This patch ensures we never inflate horizontal available space.

* LayoutTests/fast/text/negative-hyphen-width-with-break-word-expected.txt: Added.
* LayoutTests/fast/text/negative-hyphen-width-with-break-word.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::tryHyphenationAcrossOverflowingInlineTextItems const):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::breakWord):

Canonical link: https://commits.webkit.org/276999@main